fix colors and alignments

--- a/assets/scss/components/_service-section.scss
+++ b/assets/scss/components/_service-section.scss
@@ -109,4 +109,7 @@
       }
     }
   }
+  .service-item-content p {
+    text-align: justify;
+  }
 }
